--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <span>Hello, I'm</span>
                     </div>
                     <h1 class="hero-title">
-                        Amitabh Soni<span class="accent">.</span>
+                        Lalith Charan<span class="accent">.</span>
                     </h1>
                     <div class="hero-subtitle">
                         <span class="typing-text">DevOps Enthusiast</span>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="image-container">
-                        <img src="public/img5.png" alt="Amitabh Soni" class="profile-img">
+                        <img src="public/img5.png" alt="Lalith Charan" class="profile-img">
                         <div class="image-bg"></div>
                     </div>
                 </div>
@@ -377,7 +377,7 @@
                     </div>
                     <h3>DevOps Resume</h3>
                     <p>View my complete professional experience, skills, and achievements in DevOps and cloud technologies.</p>
-                    <a href="Amitabh-DevOps-Resume-14-5-2025.pdf" download class="btn btn-primary">
+                    <a href="LalithCharan_DevOps_2.5years.pdf" download class="btn btn-primary">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M21 15V19C21 19.5304 20.7893 20.0391 20.4142 20.4142C20.0391 20.7893 19.5304 21 19 21H5C4.46957 21 3.96086 20.7893 3.58579 20.4142C3.21071 20.0391 3 19.5304 3 19V15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             <polyline points="7,10 12,15 17,10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -402,7 +402,7 @@
                     <h3>Let's Connect</h3>
                     <p>I'm always interested in hearing about new opportunities and connecting with fellow DevOps enthusiasts.</p>
                     <div class="social-links">
-                        <a href="https://linkedin.com/in/amitabh-devops" target="_blank" class="social-link">
+                        <a href="https://www.linkedin.com/in/lalith-charan-ampabathina" target="_blank" class="social-link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M16 8C17.5913 8 19.1174 8.63214 20.2426 9.75736C21.3679 10.8826 22 12.4087 22 14V21H18V14C18 13.4696 17.7893 12.9609 17.4142 12.5858C17.0391 12.2107 16.5304 12 16 12C15.4696 12 14.9609 12.2107 14.5858 12.5858C14.2107 12.9609 14 13.4696 14 14V21H10V14C10 12.4087 10.6321 10.8826 11.7574 9.75736C12.8826 8.63214 14.4087 8 16 8V8Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 <rect x="2" y="9" width="4" height="12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -410,14 +410,14 @@
                             </svg>
                             LinkedIn
                         </a>
-                        <a href="https://github.com/Amitabh-DevOps" target="_blank" class="social-link">
+                        <a href="https://github.com/ALALITHCHARAN" target="_blank" class="social-link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M9 19C4 20.5 4 16.5 2 16M22 16V19C22 19.5304 21.7893 20.0391 21.4142 20.4142C21.0391 20.7893 20.5304 21 20 21H16C15.4696 21 14.9609 20.7893 14.5858 20.4142C14.2107 20.0391 14 19.5304 14 19V16.5C14 15.5 14.5 15 15 15H20C20.5304 15 21.0391 15.2107 21.4142 15.5858C21.7893 15.9609 22 16.4696 22 17V19Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M16 22V18.13C16.0375 17.6532 15.9731 17.1738 15.811 16.7238C15.6489 16.2738 15.3929 15.8634 15.06 15.52C18.2 15.17 21.5 13.98 21.5 8.52C21.4997 7.12383 20.9627 5.7812 20 4.77C20.4559 3.54851 20.4236 2.19835 19.91 0.999999C19.91 0.999999 18.73 0.649999 16 2.48C13.708 1.85882 11.292 1.85882 9 2.48C6.27 0.649999 5.09 0.999999 5.09 0.999999C4.57638 2.19835 4.54414 3.54851 5 4.77C4.03013 5.7887 3.49252 7.14346 3.5 8.55C3.5 13.97 6.8 15.16 9.94 15.55C9.611 15.89 9.35726 16.2954 9.19531 16.7399C9.03335 17.1844 8.96681 17.6581 9 18.13V22" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             GitHub
                         </a>
-                        <a href="https://x.com/Amitabh_DevOps" target="_blank" class="social-link">
+                        <a href="https://x.com/" target="_blank" class="social-link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" fill="currentColor"/>
                             </svg>
@@ -462,7 +462,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2025 Amitabh Soni. All rights reserved.</p>
+                <p>&copy; 2025 Lalith Charan. All rights reserved.</p>
                 <p>Built with passion for DevOps and automation</p>
             </div>
         </div>
