--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="image-container">
-                        <img src="public/img5.png" alt="Lalith Charan" class="profile-img">
+                        <img src="public/img5.jpg" alt="Lalith Charan" class="profile-img">
                         <div class="image-bg"></div>
                     </div>
                 </div>
