--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="projects">
+    
+     <!-- Projects Section -->
+<!--    <section id="projects" class="projects">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Featured Projects</h2>
@@ -361,8 +362,8 @@
                 </div>
             </div>
         </div>
-    </section>
-
+    </section> -->
+    
     <!-- Resume Section -->
     <section id="resume" class="resume">
         <div class="container">
