--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                             <div class="experience-header">
                                 <h3>DevOps Engineer</h3>
                                 <div class="company-info">
-                                    <span class="company">TrainWithShubham</span>
-                                    <span class="duration">Dec 2024 – Present</span>
+                                    <span class="company">Tata Consultancy Services </span>
+                                    <span class="duration">Jun 2023 – Present</span>
                                 </div>
                             </div>
                             <div class="experience-description">
@@ -180,6 +180,10 @@
                                     <li>Developed monitoring dashboards with Prometheus and Grafana, increasing system visibility and reducing MTTR by 25%</li>
                                     <li>Contributed 15+ pull requests to community projects, focusing on security enhancements and performance optimization</li>
                                     <li>Mentored 20+ learners on DevOps best practices, achieving 95% satisfaction rating based on feedback surveys</li>
+                                    <li>Linked GitLab with Jenkins (Groovy/Shell) to expand automation by 75%, halving manual deployments. </li>
+                                    <li>Centralized logging for 250+ pods with EFK and Fluentd-to-Elasticsearch, reducing debugging from hours to minutes. 
+</li>
+                                    
                                 </ul>
                             </div>
                             <div class="experience-technologies">
@@ -190,6 +194,7 @@
                                 <span class="tech-tag">Kubernetes</span>
                                 <span class="tech-tag">Prometheus</span>
                                 <span class="tech-tag">Grafana</span>
+                                <span class="tech-tag">EFK</span>
                             </div>
                         </div>
                     </div>
